{
    "name": "IA_AircraftControls",
    "maps": [
        {
            "name": "Flight",
            "id": "c1659e76-9ff9-44ab-98c1-3bc19800678f",
            "actions": [
                {
                    "name": "Stick",
                    "type": "Value",
                    "id": "55bed2ad-83dc-456c-a75a-0416526e0deb",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Pedals",
                    "type": "Value",
                    "id": "70ac4fcb-963a-4b96-b3a8-8b02e30b4b44",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "FlapsUp",
                    "type": "Button",
                    "id": "4e872237-4133-48e6-b600-599e5f1eb821",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "FlapsDown",
                    "type": "Button",
                    "id": "9514965a-4479-48bf-b736-f76f3b346b51",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ToggleAirbrakes",
                    "type": "Button",
                    "id": "36cb88e1-d294-4cd0-8779-c1526c963544",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Engine",
                    "type": "Button",
                    "id": "823b6884-26a8-4ea3-b0f2-04cd64513aaf",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ThrottleUp",
                    "type": "Button",
                    "id": "ab176654-09f6-4b94-9d87-8aef5efd5fb3",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ThrottleDown",
                    "type": "Button",
                    "id": "82d6d6cc-3b2f-405c-8fa3-01ace2a2b0aa",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ToggleBrakes",
                    "type": "Button",
                    "id": "29f59c38-ae4e-46a7-b518-b29d94c7e9d4",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "29a72cb6-dac2-4da3-ac05-4ce663d9a88a",
                    "path": "<Joystick>/stick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Stick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "226140e9-47a8-44b6-a1a3-57fbd1601bac",
                    "path": "<Joystick>/{Twist}",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Pedals",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6f7f4f06-6584-4c18-b68a-5fb0da95a0ef",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Engine",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "dc430908-6d12-4fe5-b57f-6cd3e593b198",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ThrottleUp",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "bcbad2b5-4764-4e99-9a27-970e6ba66241",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ThrottleDown",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8477716e-4722-46d6-b360-7d48abc605a0",
                    "path": "<Keyboard>/b",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ToggleBrakes",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0a235e07-0c7f-4378-a777-16f75bc93e47",
                    "path": "<Keyboard>/pageUp",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "FlapsUp",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "848611ed-9089-48ad-885e-5cff33bc26b2",
                    "path": "<Keyboard>/pageDown",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "FlapsDown",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e99f9bb2-cb20-498f-971f-569b030504fb",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ToggleAirbrakes",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}